# pytinybvh

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  NOTICE.md  README.md  dragon.ply  pyproject.toml  setup.py  test.py  test_pytinybvh.py  tests.py  visualise.py
assets/: sneks.ply
src/: _pytinybvh.pyi  capabilities.h  pytinybvh.cpp  pytinybvh.pyi
src/pytinybvh/: __init__.py
