[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "pytinybvh"
version = "1.0.1"
authors = [
    { name = "Florent Le Moël", email = "25004801+FlorentLM@users.noreply.github.com" }
]
description = "Tiny Python bindings for tinybvh"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=2.0.0",
]

[project.optional-dependencies]

test = [
    "pytest",
    "matplotlib",
    "trimesh",
]
visualise = [
    "pyvista",
    "trimesh",
]

dev = [
    "pytinybvh[test,visualise]",
]